// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptionContent component should be displayed correctly with just title and children 1`] = `
<div>
  <div
    class=""
  >
    <h4
      class="col-account-description-title"
    >
      A title mock
    </h4>
    Test description component children
  </div>
</div>
`;

exports[`DescriptionContent component should be displayed correctly with two messages 1`] = `
<div>
  <div
    class=""
  >
    <h4
      class="col-account-description-title"
    >
      A title mock
    </h4>
    <div
      class="col-account-description-message"
    >
      <p>
        <strong>
          First
        </strong>
         message 
        <code>
          here
        </code>
      </p>
    </div>
    <div
      class="col-account-description-message"
    >
      <p>
        second message with 
        <a
          href="https://examplelink.mock"
        >
          link
        </a>
      </p>
    </div>
    Test description component children
  </div>
</div>
`;

exports[`DescriptionContent component should handle css from props via cssClassesObject 1`] = `
<div>
  <div
    class="col-mock-class"
  >
    <h4
      class="col-account-description-title"
    >
      A title mock
    </h4>
  </div>
</div>
`;
